layout + scrollbar issues

--- a/components/common/LeftSideBar/LeftSideBar.module.scss
+++ b/components/common/LeftSideBar/LeftSideBar.module.scss
@@ -4,6 +4,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: stretch;
+  min-width: 286px;
 }
 
 .header {
@@ -15,6 +16,9 @@
   padding: 16px 8px 20px 8px;
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
   background-color: var(--dark-1);
+  svg {
+    max-width: 100%;
+  }
 }
 
 .content {
